Namespace-team-a/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
  namespace: team-a
spec:
  selector:
    app: app-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
