Namespace-team-a/NetworkPolicyAllow-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-allow-internal
  namespace: team-a
spec:
  podSelector: {}

  ingress:
  - from:
    - podSelector: {}   # only team-a pods

  egress:
  - to:
    - podSelector: {}   # only team-a pods

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system   # DNS
